bin_PROGRAMS=kiwix-serve
AM_CPPFLAGS=-I$(top_srcdir)/src/common
AUTOMAKE_OPTIONS=subdir-objects
kiwix_serve_SOURCES= kiwix-serve.cpp
kiwix_serve_CXXFLAGS=$(KIWIXLIB_CFLAGS) $(LIBZIM_CFLAGS) ${MICROHTTPD_CFLAGS} $(LIBCTPP2_CFLAGS) $(LIBPUGIXML_CFLAGS) $(XAPIAN_CFLAGS) $(ICU_CFLAGS) $(LZMA_CFLAGS) $(ZLIB_CFLAGS) -I../common/

kiwix_serve_LDFLAGS=$(CHECK_LDFLAGS)

if STATIC_BINS
kiwix_serve_LDFLAGS+= $(KIWIXLIB_STATIC_LIBS) $(XAPIAN_STATIC_LDFLAGS) $(STATIC_LIBRT_ARCHIVE) $(ICU_STATIC_LDFLAGS) $(MICROHTTPD_STATIC_LDFLAGS) $(LIBZIM_STATIC_LDFLAGS) $(LIBCTPP2_STATIC_LDFLAGS) $(LIBPUGIXML_STATIC_LDFLAGS) $(LZMA_STATIC_LDFLAGS) $(UUID_STATIC_LDFLAGS) $(ZLIB_STATIC_LDFLAGS) $(STATIC_LIBM_ARCHIVE) $(STATIC_LIBSTDCPP_ARCHIVE) $(STATIC_LIBDL_ARCHIVE) $(STATIC_LIBGCC_ARCHIVE) $(STATIC_LIBPTHREAD_ARCHIVE) --static
else
kiwix_serve_LDFLAGS+= $(KIWIXLIB_LIBS) $(XAPIAN_LDFLAGS) $(ICU_LDFLAGS) $(MICROHTTPD_LDFLAGS) $(LIBZIM_LDFLAGS) $(LIBCTPP2_LDFLAGS) $(LIBPUGIXML_LDFLAGS) $(LZMA_LDFLAGS) $(UUID_LDFLAGS) $(ZLIB_LDFLAGS) -lpthread
endif

if IS_OSX
# kiwix_serve_CXXFLAGS+= -stdlib=libstdc++
kiwix_serve_LDFLAGS+= $(LIBICONV_STATIC_LDFLAGS) $(GETTEXT_STATIC_LDFLAGS) -framework IOKit -framework CoreFoundation
#-static-libgcc -static-libstdc++
endif

if HAVE_UPX
all-am: all
	upx -9 $(bin_PROGRAMS)
endif
